# dses-if-flask

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
webserver/: __init__.py  index.py
webserver/dish/: __init__.py  dish_controller.py
webserver/model/: __init__.py  db.py
webserver/mqtt/: __init__.py
webserver/static/: update_telemetry.js
webserver/templates/: ctrl.html  index.html
webserver/views/: __init__.py  ctrl.py  index.py
